Projects responsives fixed and gave navigation bar color on mobile

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -24,7 +24,7 @@
                 color: black;
 
                 &:hover{
-                    color: red;
+                    color: variables.$red;
                 }
             }
         }
@@ -32,10 +32,13 @@
 
     .icon-bar {
         display: none;
+        color: variables.$red;
+
     }
 
     .icon-x {
         display: none;
+        color: variables.$red;
     }
 }
 
@@ -57,6 +60,8 @@
 
             &.hidden {
                 display: none;
+                background: variables.$white;
+                z-index: 5;
             }
         }
 
