--- a/src/app/components/projects/project/project.component.scss
+++ b/src/app/components/projects/project/project.component.scss
@@ -56,6 +56,7 @@
 
 @media screen and (max-width: 62.5rem){ // 1000px
     .project {
+        padding: 4rem 12rem;
         flex-direction: column;
 
         .carousel-container{
@@ -66,8 +67,25 @@
     }
 }
 
+@media screen and (max-width: 53.125rem){ // 850 px
+    .project{
+        padding: 4rem 6rem;
+
+        .content-container {
+            .subtitle{
+
+            }
+
+            .paragraph{
+
+            }
+        }
+    }
+}
+
 @media screen and (max-width: 40.625rem){ // 650 px
     .project{
+        padding: 4rem 2rem;
         .content-container {
             .subtitle{
                 font-size: variables.$m650Subtitle;
