--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -111,10 +111,9 @@
 
         .project-list{
             justify-content: space-evenly;
-            gap: 2rem;
+
 
             .project-container{
-                height: variables.$gapBetweenLine;
 
                 &.odd-alignment{
                     align-items: unset;
